# scummvm

./: README-EMSCRIPTEN  configure
backends/: base-backend.h
backends/audiocd/sdl/: sdl-audiocd.cpp  sdl-audiocd.h
backends/graphics/: graphics.h
backends/graphics/surfacesdl/: surfacesdl-graphics.cpp  surfacesdl-graphics.h
backends/mixer/sdl/: sdl-mixer.cpp
backends/platform/sdl/posix/: posix-main.cpp
backends/platform/sdl/win32/: win32-main.cpp
base/: main.cpp
common/: c++11-compat.h
devtools/create_project/: cmake.cpp  cmake.h  create_project.cpp
devtools/create_project/cmake/: CMakeLists.txt  FindLibs.cmake
engines/scumm/: scumm.cpp  scumm.h
engines/scumm/smush/: smush_player.cpp
graphics/: scaler.cpp
